--- a/Beijing District Map/index.html
+++ b/Beijing District Map/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div id="main" style="width: 100%;height:800px;"></div>
-<script type="text/javascript" src="static/js/jquery.min.js"></script>
-<script type="text/javascript" src="static/js/app.js"></script>
+<script type="text/javascript" src="../js/myjs/jquery.min.js"></script>
+<script type="text/javascript" src="../myjs/app.js"></script>
 </body>
 </html>
